--- a/index.html
+++ b/index.html
@@ -139,14 +139,38 @@
           <div class="section" id="feedback">
            <section id="feedbackSection">
 
-               <div class="postIt">
+              <div class="postIt">
                 <p class="ml" onclick="location.href='docs/ML.pdf';"> - Mentions légales</p>
                 <p class="cgv" onclick="location.href='docs/CGV.pdf';"> - CGV</p>
               </div>
 
+              <div id="phoneId" class="phone">
+                <img class="phoneImg" src="img/phone.png"/>
+                <div class="phoneFollow">
+                  <div class="button">Follow me on</div>
+                  <div class="social facebook"><a href="https://www.facebook.com/anastasia.teach.1"><i class="fa fa-facebook"></i></a></div>
+                  <div class="social linkedin"><a href="https://www.linkedin.com/in/anastasia-vasina-03a98b110/?originalSubdomain=fr"><i class="fa fa-linkedin"></i></a></div>
+                </div>
+
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+                  <defs>
+                    <filter id="goo">
+                      <feGaussianBlur in="SourceGraphic" stdDeviation="8" result="blur" />
+                      <feColorMatrix
+                        in="blur"
+                        mode="matrix"
+                        values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7"
+                        result="goo"
+                      />
+                      <feBlend in="SourceGraphic" in2="goo" />
+                    </filter>
+                  </defs>
+                </svg>
+              </div>
+
+
              <div id ="bookFeedbackID" class="bookFeedback">
                <img class="magniflier" src="img/BookWithTextImg.png"/>
-
              </div>
            </section>
                 <!-- SECTION Feedback -->
@@ -423,11 +447,16 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
 
+        <script>
+          $(".button").click(function(){
+            $(".social.facebook").toggleClass("clicked");
+            $(".social.linkedin").toggleClass("clicked");
+          })
+        </script>
         <script type='text/javascript'>
           const typewriter = new Typewriter('#typewriter', {
             loop: false
           });
-
           typewriter
             .typeString('Bienvenue sur le site d’enseignement et de traduction d’Anastasia Vasina.')
             .typeString('<br/>')
