Blog done and fix font on info page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <link rel="stylesheet" href="css/design.css">
         <link rel="stylesheet" href="css/turn.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <!-- liens vers pagepiling effet-->
         <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.css">
 
         <!-- Loading script while fully loaded page -->
@@ -65,22 +64,23 @@
 
     <body>
 
+<!-- Section for loading effect, while page not fully loaded -->
     <div id="overlay">
-            <div id="progstat"></div>
-            <div id="progress"></div>
+      <div id="progstat"></div>
+      <div id="progress"></div>
     </div>
 
-
+<!-- Main structure -->
     <div id="pagepiling">
               <!-- Navbar -->
           		<div class="navbar navbar-inverse" role="navigation" id="navbar">
-          			<div class="container" >
+          			<div class="container">
           				<div class="navbar-header page-scroll">
                     <h4 >
-                      <font color="white"> Anastasia Vasina</font>
+                      <font color="white">Anastasia Vasina</font>
                     </h4>
                       <h5>
-                        <font color="white"> Translation & Teaching</span>
+                        <font color="white">Traduction et enseignement</span>
                       </h5>
           				</div>
           				  <div class="collapse navbar-collapse" id="collapse-menu">
@@ -93,15 +93,14 @@
           			</div>
           		</div>
 
-            <!-- SECTION ACCUEIL  -->
+<!-- SECTION ACCUEIL  -->
              <section id="mainsection" class="section">
                <div class ="linkToFeedback" onclick="location.href='#page3';"></div>
                <div id="typewriter" class="auto_write"></div>
               </section>
 
-
+<!-- SECTION SERVICES  -->
             <div id="sectionService" class="section">
-              <!-- SECTION SERVICES  -->
               <section id="sectionService">
 
                   <div class="container">
@@ -135,11 +134,13 @@
             </section>
           </div>
 
-
+<!-- SECTION Feedback -->
           <div class="section" id="feedback">
            <section id="feedbackSection">
 
               <div class="postIt">
+                <p class="liensUtils">Liens utiles :</p>
+                <p class="blog" onclick="location.href='https://lefleavecgigietana.wixsite.com/blogfle';"> - Blog</p>
                 <p class="ml" onclick="location.href='docs/ML.pdf';"> - Mentions légales</p>
                 <p class="cgv" onclick="location.href='docs/CGV.pdf';"> - CGV</p>
               </div>
@@ -168,62 +169,11 @@
                 </svg>
               </div>
 
-
              <div id ="bookFeedbackID" class="bookFeedback">
                <img class="magniflier" src="img/BookWithTextImg.png"/>
              </div>
            </section>
-                <!-- SECTION Feedback -->
-
-                <!--<div id="retours" class="contact-info">
-                     <div class="container"> -->
-
-
-                         <!-- <div class="footer-col col-md-6 text-center">
-                            <h1>Nous rendre visite</h1>
-                                <address>
-                                    <strong>Frugal Solution</strong><br>
-                                    11 rue de Lille<br>
-                                    59000, Lille<br>
-                                    Tel: (+33) 320 000 000
-                                  </address>
-
-                                  <address>
-                                    <strong>Frugal Solution</strong><br>
-                                    <a href="mailto:#">contact@frugalsolution.com</a>
-                                  </address>
-                          </div>
-
-                          <div class="footer-col col-md-6 text-center">
-                              <h1>Nous suivre</h1>
-                              <ul class="list-inline "> -->
-
-                                  <!--  CI-DESSOUS POUR CHANGER LES LIENS VERS VOS RESEAUX SOCIAUX  :  href="ici votre lien " -->
-                                <!--  <li>
-                                      <a href="#" class="btn-social btn-outline"><i class="fa fa-2x fa-linkedin"></i></a>
-                                  </li>
-                                  <li>
-                                      <a href="#" class="btn-social btn-outline"><i class="fa fa-2x fa-facebook"></i></a>
-                                  </li>
-                                  <li>
-                                      <a href="#" class="btn-social btn-outline"><i class="fa fa-2x fa-twitter"></i></a>
-                                  </li>
-                                  <li>
-                                      <a href="#" class="btn-social btn-outline"><i class="fa fa-2x  fa-vine"></i></a>
-                                  </li>
-                              </ul>
-                          </div> -->
-
-                   <!-- </div>
-              </div>-->
-            </div>
-
-            <!-- Footer
-            <footer class="navbar navbar-default navbar-static-bottom text-center" id="footer">
-              <div class="col-lg-12">
-                <p> <strong>&copy; Frugal Solution - 2015 </strong> </p>
-              </div>
-            </footer> -->
+      </div>
     </div>
 
 
@@ -238,13 +188,15 @@
           <h3 class="modal-title"><b>À propos</b></h3>
           </br>
           <p class="bodyCenterPolice">
-            Diplômée d’un Master LEA de l’Université Paul Valéry à Montpellier et d’une Maîtrise FLE de l’Université d’Artois à Arras,
-            je traduis et enseigne depuis plusieures années en tant qu'indépendante et également à l'université de Montpellier.
+            Diplômée d’un Master LEA de l’Université Paul Valéry à Montpellier et d’un Master FLE de l’Université d’Artois à Arras,
+            je traduis et enseigne depuis plusieures années en tant qu'indépendante et également auprès des universités de Montpellier.
           </p>
           <p class="bodyCenterPolice">
             J'aime les langues et surtout partager cette passion. Je parle français, russe, anglais et espagnol.
-            Je cherche à allier le plaisir et l’efficacité en adaptant mes méthodes à vos besoins. L’interculturalité occupe une place
-            importante pour moi dans la traduction comme dans l’enseignement.
+          </p>
+          <p class="bodyCenterPolice">
+            Je cherche à allier le plaisir et l’efficacité en adaptant mes méthodes à vos besoins.
+            L’interculturalité occupe une place importante pour moi dans la traduction comme dans l’enseignement.
           </p>
           </br>
           <p class="gras_italique_serif"><i>« Grâce aux langues, on est chez soi n’importe où »</i> – Edmund de Waal</p>
@@ -264,17 +216,20 @@
           <h3 class="modal-title"><b>Enseignement</b></h3>
           </br>
           <p class="bodyCenterPolice">
-            Ensemble nous allons apprendre la langue et la culture française !
+            Apprenons ensemble la langue et la culture française (FLE/FOS/FLS) :
           </p>
         </br>
           <p class="bodyCenterPolice"><img  src="icon/photo.png" class="iconPolice"></img>&nbsp;Sorties culturelles individuelles ou en groupe sur la région de Montpellier</p>
           <p class="bodyCenterPolice"><img  src="icon/paris.png" class="iconPolice"></img>Cours de français langue étrangère tous niveaux</p>
           <p class="bodyCenterPolice"><img  src="icon/chat.png" class="iconPolice"></img>&nbsp;Cours particuliers ou en groupe (professionnel)</p>
           <p class="bodyCenterPolice"><img  src="icon/pdf.ico" class="iconPolice"></img>&nbsp;Ressources pédagogiques personnalisées</p>
-          <p class="bodyCenterPolice"><img  src="icon/Graduation.png" class="iconPolice"></img>&nbsp;Préparation aux examens</p>
+          <p class="bodyCenterPolice"><img  src="icon/Graduation.png" class="iconPolice"></img>&nbsp;Préparation aux examens (DELF, DALF, TCF, TEF, etc.)</p>
           <p class="bodyCenterPolice"><img  src="icon/check.png" class="iconPolice"></img>&nbsp;Cours de français sur objectifs spécifiques à la demande</p>
+          <p class="bodyCenterPolice">Cours particuliers en langues :</p>
+          <p class="bodyCenterPolice">Cours particuliers ou aide aux devoirs en anglais (de tous niveaux)</p>
+          <p class="bodyCenterPolice">Cours particuliers ou aide aux devoirs en russe (de tous niveaux)</p>
           <p class="bodyCenterPolice"><img  src="icon/mail.png" class="iconPolice"></img>&nbsp;Cours dispensés en ligne, chez vous ou bien dans vos locaux professionnels.</p>
-          <p class="bodyCenterPolice"><b><u>Pour toutes demandes de tarifs, merci de me contacter par e-mail en expliquant vos besoins.</u></b></p>
+          <p class="bodyCenterPolice"><b><u>Pour toutes demandes de tarifs, merci de me contacter par e-mail. Mes tarifs sont adaptés à vos besoins.</u></b></p>
           </br>
         </div>
       </div>
@@ -330,14 +285,14 @@
                            <div class="row">
                                <div class="col-md-6">
                                    <div class="form-group">
-                                       <label for="form_name">Firstname *</label>
+                                       <label for="form_name">Prénom *</label>
                                        <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
                                        <div class="help-block with-errors"></div>
                                    </div>
                                </div>
                                <div class="col-md-6">
                                    <div class="form-group">
-                                       <label for="form_lastname">Lastname *</label>
+                                       <label for="form_lastname">Nom *</label>
                                        <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
                                        <div class="help-block with-errors"></div>
                                    </div>
@@ -353,12 +308,12 @@
                                </div>
                                <div class="col-md-6">
                                    <div class="form-group">
-                                       <label for="form_need">Please specify your need *</label>
+                                       <label for="form_need">Veuillez préciser votre besoin *</label>
                                        <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
                                            <option value=""></option>
-                                           <option value="Request quotation">Teaching</option>
-                                           <option value="Request order status">Translate</option>
-                                           <option value="Other">Other</option>
+                                           <option value="Request quotation">Enseignement</option>
+                                           <option value="Request order status">Traduction</option>
+                                           <option value="Other">Autre</option>
                                        </select>
                                        <div class="help-block with-errors"></div>
                                    </div>
@@ -380,7 +335,7 @@
                            <div class="row">
                                <div class="col-md-12">
                                    <p class="text-muted">
-                                       <strong>*</strong> These fields are required.</p>
+                                       <strong>*</strong>Ces champs sont obligatoires.</p>
                                </div>
                            </div>
                        </div>
@@ -392,33 +347,28 @@
              <div class="col-sm-6">
                      <!-- SECTION CONTACT -->
                      <div id="contact" class="contact-info">
-                         <!-- <div class="container"> -->
-                                 <h1>Informations personnelles</h1>
-                                     <address>
-                                         <strong>Anastasia Vasina</strong><br>
-                                         23 rue de Raguse<br>
-                                         34000, Montpellier<br>
-                                         Tel: (+33) 6 XX XX XX XX
-                                       </address>
-
-                                       <address>
-                                         <strong>Direct Mail Concat</strong><br>
-                                         <a href="mailto:#">contact@Test.com</a>
-                                       </address>
-
-                                   <h1>Me suivre</h1>
-                                   <ul class="list-inline ">
-
-                                       <!--  CI-DESSOUS POUR CHANGER LES LIENS VERS VOS RESEAUX SOCIAUX  :  href="ici votre lien " -->
-                                       <li>
-                                           <a href="https://www.linkedin.com/in/anastasia-vasina-03a98b110/?originalSubdomain=fr" class="btn-social btn-outline"><i class="fa fa-2x fa-linkedin"></i></a>
-                                       </li>
-                                       <li>
-                                           <a href="https://www.facebook.com/anastasia.teach.1" class="btn-social btn-outline"><i class="fa fa-2x fa-facebook"></i></a>
-                                       </li>
-                                   </ul>
-                         <!-- </div> -->
-                   </div>
+                       <h1>Informations personnelles</h1>
+                           <address>
+                               <strong>Anastasia Vasina</strong><br>
+                               23 rue de Raguse<br>
+                               34000, Montpellier<br>
+                               Tel: (+33) 6 46 64 56 47
+                             </address>
+                             <address>
+                               <strong>Direct Mail Concat</strong><br>
+                               <a href="mailto:#">contact@anastasia-vasina-langues.com</a>
+                             </address>
+                         <h1>Me suivre</h1>
+                         <ul class="list-inline ">
+                             <!-- LIENS VERS VOS RESEAUX SOCIAUX-->
+                             <li>
+                                 <a href="https://www.linkedin.com/in/anastasia-vasina-03a98b110/?originalSubdomain=fr" class="btn-social btn-outline"><i class="fa fa-2x fa-linkedin"></i></a>
+                             </li>
+                             <li>
+                                 <a href="https://www.facebook.com/anastasia.teach.1" class="btn-social btn-outline"><i class="fa fa-2x fa-facebook"></i></a>
+                             </li>
+                         </ul>
+                      </div>
                  </div>
                </div>
               </div>
