--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <link rel="stylesheet" href="css/zoomGlass.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/design.css">
-        <link rel="stylesheet" href="css/turn.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/alvarotrigo/pagePiling.js/master/jquery.pagepiling.css">
 
@@ -85,9 +84,9 @@
           				</div>
           				  <div class="collapse navbar-collapse" id="collapse-menu">
           					<ul class="nav navbar-nav navbar-right">
-                      <li data-menuanchor="Home"><a href="#Home">Accueil</a></li>
-                      <li data-menuanchor="page2"><a href="#page2">Informations</a></li>
-                      <li data-menuanchor="page3"><a href="#page3">Feedback</a></li>
+                      <li data-menuanchor="Home"><a href="#Home"><b>Accueil</b></a></li>
+                      <li data-menuanchor="page2"><a href="#page2"><b>Informations</b></a></li>
+                      <li data-menuanchor="page3"><a href="#page3"><b>Feedback</b></a></li>
           					</ul>
           				</div>
           			</div>
@@ -276,7 +275,6 @@
                <div class="col-xl-8 offset-xl-2 py-5">
 
                    <h1>Contact</h1>
-
                    <div class="formBlock">
                    <form id="contact-form" class="form" method="post" action="contact.php" role="form">
                        <div class="messages"></div>
@@ -441,7 +439,7 @@
             });
         </script>
 
-        <!-- <script>
+        <script>
           $(function () {
             // init the validator
             // validator files are included in the download package
@@ -478,6 +476,6 @@
                 }
             })
         });
-        </script> -->
+        </script>
     </body>
 </html>
