change   main page  and remove writing effect

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <!-- SECTION ACCUEIL  -->
              <section id="mainsection" class="section">
                <div class ="linkToFeedback" onclick="location.href='#page3';"></div>
-               <div id="typewriter" class="auto_write"></div>
+               <!-- <div id="typewriter" class="auto_write"></div> -->
               </section>
 
 <!-- SECTION SERVICES  -->
