--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <div id="phoneId" class="phone">
                 <img class="phoneImg" src="img/phone.png"/>
                 <div class="phoneFollow">
-                  <div class="button">Follow me on</div>
+                  <div class="button">Follow me</div>
                   <div class="social facebook"><a href="https://www.facebook.com/anastasia.teach.1"><i class="fa fa-facebook"></i></a></div>
                   <div class="social linkedin"><a href="https://www.linkedin.com/in/anastasia-vasina-03a98b110/?originalSubdomain=fr"><i class="fa fa-linkedin"></i></a></div>
                 </div>
@@ -169,7 +169,7 @@
               </div>
 
              <div id ="bookFeedbackID" class="bookFeedback">
-               <img class="magniflier" src="img/BookWithTextImg.png"/>
+               <img id="imgFeedbackBook" class="magniflier" src="img/BookWithTextImg.png"/>
              </div>
            </section>
       </div>
@@ -375,6 +375,13 @@
         </div>
       </div>
 
+  <!-- Modal feedback book for mobile platformes -->
+  <div id="mobileFeedbackBook" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img01">
+    <div id="caption"></div>
+  </div>
+
   <!-- ================================= End MODALS ================================= -->
 
         <!-- Script Javascript -->
@@ -438,7 +445,92 @@
               });
             });
         </script>
+        <script>
+        window.mobileAndTabletcheck = function() {
+        	var check = false;
+        	(function(a) {
+        		if (/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino|android|ipad|playbook|silk/i.test(a) || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0, 4))) check = true;
+        	})(navigator.userAgent || navigator.vendor || window.opera);
+        	return check;
+        };
+        </script>
+        <script>
+        $(function () {
+          alert("Start");
+          if(mobileAndTabletcheck() == false){
+            alert("mobileAndTabletcheck is FALSE");
+            zoom();
+          }else if(mobileAndTabletcheck() == true){
+            alert("mobileAndTabletcheck is TRUE");
+            var modal = document.getElementById("mobileFeedbackBook");
+            var img = document.getElementById("imgFeedbackBook");
+            var modalImg = document.getElementById("img01");
+            var captionText = document.getElementById("caption");
+            img.onclick = function(){
+              modal.style.display = "block";
+              modalImg.src = this.src;
+              captionText.innerHTML = this.alt;
+            }
+            var span = document.getElementsByClassName("close")[0];
+            span.onclick = function() {
+              modal.style.display = "none";
+            }
 
+            var style = document.createElement('style');
+            style.type = 'text/css';
+            style.innerHTML = '#imgFeedbackBook {border-radius: 5px; cursor: pointer; transition: 0.3s;}';
+            document.getElementsByTagName('head')[0].appendChild(style);
+
+            var style2 = document.createElement('style');
+            style2.type = 'text/css';
+            style2.innerHTML = '#imgFeedbackBook:hover {opacity: 0.7;}';
+            document.getElementsByTagName('head')[0].appendChild(style2);
+
+            var style3 = document.createElement('style');
+            style3.type = 'text/css';
+            style3.innerHTML = '.modal {display: none; position: fixed; z-index: 1; padding-top: 100px; left: 0; top: 0; width: 40%; height: 40%; overflow: auto; background-color: rgb(0,0,0); background-color: rgba(0,0,0,0.9); }';
+            document.getElementsByTagName('head')[0].appendChild(style3);
+
+            var style4 = document.createElement('style');
+            style4.type = 'text/css';
+            style4.innerHTML = '#mobileFeedbackBook.modal-content {margin: auto; display: block; width: 40%; max-width: 50%; }';
+            document.getElementsByTagName('head')[0].appendChild(style4);
+
+            var style5 = document.createElement('style');
+            style5.type = 'text/css';
+            style5.innerHTML = '#caption { margin: auto; display: block; width: 80%; max-width: 700px; text-align: center; color: #ccc; padding: 10px 0; height: 150px; -webkit-animation-name: zoom; -webkit-animation-duration: 0.6s; animation-name: zoom; animation-duration: 0.6s;}';
+            document.getElementsByTagName('head')[0].appendChild(style5);
+
+            var style6 = document.createElement('style');
+            style6.type = 'text/css';
+            style6.innerHTML = '@-webkit-keyframes zoom {from {-webkit-transform:scale(0)} to {-webkit-transform:scale(0.2)}}';
+            document.getElementsByTagName('head')[0].appendChild(style6);
+
+            var style7 = document.createElement('style');
+            style7.type = 'text/css';
+            style7.innerHTML = '@keyframes zoom {from {transform:scale(0)} to {transform:scale(0.2)}}';
+            document.getElementsByTagName('head')[0].appendChild(style7);
+
+            var style8 = document.createElement('style');
+            style8.type = 'text/css';
+            style8.innerHTML = '.close { position: absolute; top: 15px; right: 35px; color: #f1f1f1; font-size: 40px; font-weight: bold; transition: 0.3s;}';
+            document.getElementsByTagName('head')[0].appendChild(style8);
+
+            var style9 = document.createElement('style');
+            style9.type = 'text/css';
+            style9.innerHTML = '@media only screen and (max-width: 700px){.modal-content {width: 100%;}';
+            document.getElementsByTagName('head')[0].appendChild(style9);
+
+            var style10 = document.createElement('style');
+            style10.type = 'text/css';
+            style10.innerHTML = '.close:hover, .close:focus {color: #bbb; text-decoration: none; cursor: pointer;}';
+            document.getElementsByTagName('head')[0].appendChild(style10);
+           }
+
+           //see also https://stackoverflow.com/questions/39858998/zoom-in-and-out-on-mouse-click-with-css/39859268
+
+          });
+        </script>
         <script>
           $(function () {
             // init the validator
